fixing unsafe scripts

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!--Import Google Icon Font-->
-<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <!--Import materialize.css framework!-->
 <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -17,15 +17,15 @@
 <nav class="blue darken-4">
 	<div class="nav-wrapper">
 		<!--Logo for desktop only-->
-		<div id="logo-wrapper" class="hide-on-med-and-down"> 
+		<div id="logo-wrapper" class="hide-on-med-and-down">
 			<a href="index.html" class="brand-logo" id="project-smile-logo">
 				Project Smile
 				<h6 id="uc-merced-logo">University of California, Merced</h6>
-			</a> 
+			</a>
 		</div>
 		<!--Logo for tablet and smaller-->
-		<a href="#!" class="brand-logo hide-on-large-only">Project Smile</a> 
-		
+		<a href="#!" class="brand-logo hide-on-large-only">Project Smile</a>
+
 		<!--Horizontal nav on desktop, hides for smaller displays and creates hamburger nav icon-->
 		<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons left-pad">menu</i>
 		</a>
@@ -36,7 +36,7 @@
 			<li><a href="calendar.html">Calendar</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
-		
+
 		<!--side nav list created on smaller displays-->
 		<ul class="side-nav" id="mobile-demo">
 			<li class="logo">
@@ -61,7 +61,7 @@
 
 
 <!--main content goes here-->
-<main> 
+<main>
 	<!--parallax 1 - img banner//mission statement-->
 	<div id="index-banner" class="parallax-container">
 		<div class="section no-pad-bot">
@@ -74,11 +74,11 @@
 				</div>
 			</div>
 		</div>
-		<div class="parallax img-dark"> 
-			<img src="images/parallax-bg.png" alt="parallax" class="parallaximage"> 
+		<div class="parallax img-dark">
+			<img src="images/parallax-bg.png" alt="parallax" class="parallaximage">
 		</div>
 	</div>
-	
+
 	<!--section 1 - Card Navigation Section -->
 	<div class="section white">
 		<div class="row card-block">
@@ -93,7 +93,7 @@
 						</span>
 					</div>
 					<div class="card-content">
-				  		<p>Project Smile's full calendar of scheduled events and meetings is available to be viewed 
+				  		<p>Project Smile's full calendar of scheduled events and meetings is available to be viewed
 						here.</p>
 					</div>
 					<div class="card-action">
@@ -101,7 +101,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="col s12 m8 offset-m2 l4">
 				<div class="card medium">
 					<div class="card-image">
@@ -115,24 +115,24 @@
 						</span>
 					</div>
 					<div class="card-content">
-				  		<p>Project Smile volunteers through Global Dental Relief to bring free 
+				  		<p>Project Smile volunteers through Global Dental Relief to bring free
 						dental care to children all over the world.</p>
 					</div>
 					<div class="card-action">
-				  		<a href="http://globaldentalrelief.org/" target="_blank" 
+				  		<a href="https://globaldentalrelief.org/" target="_blank"
 						class="waves-effect waves-light btn blue">
 							Learn More
 						</a>
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="col s12 m8 offset-m2 l4">
 				<div class="card medium">
 					<div class="card-image">
 				  		<img src="images/new-member-card.png" alt="New Members" class="img-dark">
-				  		
-						<span class="card-title title-bg">		
+
+						<span class="card-title title-bg">
 							<i class="material-icons md-20">&#xE853;</i>
 							<span class="hide-on-med-only">Come Smile with Us!</span>
 							<span class="hide-on-small-only hide-on-large-only fs-20">
@@ -154,7 +154,7 @@
       </div>
 
 	</div>
-	
+
 	<!--parallax 2-->
 	<div id="index-banner-2" class="parallax-container">
 		<div class="section no-pad-bot">
@@ -162,19 +162,19 @@
 				<h1 class="header pad-top-10 center grey-text text-lighten-5">Who We Are</h1>
 				<div class="divider"></div>
 				<div class="row center pad-top-2">
-					<h4 class="header col s12 grey-text text-lighten-5">We are a group of diverse 
-					students that share a common goal: to promote diversity and leadership in the field of 
-					dentistry. 
+					<h4 class="header col s12 grey-text text-lighten-5">We are a group of diverse
+					students that share a common goal: to promote diversity and leadership in the field of
+					dentistry.
 					</h4>
 				</div>
 			</div>
 		</div>
-	
-		<div class="parallax img-dark"> 
-			<img src="images/parallax-bg-2.png" alt="parallax" class="parallaximage"> 
+
+		<div class="parallax img-dark">
+			<img src="images/parallax-bg-2.png" alt="parallax" class="parallaximage">
 		</div>
 	</div>
-	
+
 	<!--section 2-->
 	<div class="section white">
 		<div class="row container">
@@ -184,22 +184,22 @@
 			</div>
 			<div class="col s12 m6 l6">
 				<p class="grey-text text-darken-3 lighten-3 justify-text">
-				Project Smile, the Pre-Dental student organization on the UC Merced campus was founded on the core 
+				Project Smile, the Pre-Dental student organization on the UC Merced campus was founded on the core
 				principles of education and civic engagement. The club has dedicated time to volunteer
-				in the community to raise awareness and to advocate for maintaining oral health as well as general 
+				in the community to raise awareness and to advocate for maintaining oral health as well as general
 				well being related to current health issues.
 				</p>
 			</div>
 			<div class="col s12 m6 l6">
 				<p class="grey-text text-darken-3 lighten-3 justify-text">
 				Additionally, Project Smile strives to promote oral health awareness through volunteer work,
-				outreach, and attending various workshops at different dental schools. As a dedicated group of 
+				outreach, and attending various workshops at different dental schools. As a dedicated group of
 				passionate students, this pre-dental club strives for the utmost success in the oral world.
 				</p>
 			</div>
 		</div>
 	</div>
-	
+
 	<!--parallax 3-->
 	<div id="index-banner-3" class="parallax-container">
 		<div class="section no-pad-bot">
@@ -213,11 +213,11 @@
 				</div>
 			</div>
 		</div>
-	
-		<div class="parallax img-dark"> 
-			<img src="images/parallax-bg-3.png" alt="parallax" class="parallaximage"> 
+
+		<div class="parallax img-dark">
+			<img src="images/parallax-bg-3.png" alt="parallax" class="parallaximage">
 		</div>
-	</div> 
+	</div>
 </main>
 
 <!-- footer -->
@@ -230,7 +230,7 @@
 				<p class="grey-text text-lighten-5">
 					Thank you for visiting Project Smile's website! Please feel free to contact us if you share a
 					passion of oral hygiene with us and are interested in joining Project Smile. Also please feel
-					free to contact our officers for information regarding events, services, or inquiries. 
+					free to contact our officers for information regarding events, services, or inquiries.
 				</p>
 	  		</div>
 	  		<div class="col l5 offset-l2 m4 offset-m3 s12">
@@ -238,7 +238,7 @@
 					<ul class="col l6 s12 footer-ul">
 						<li><a class="grey-text text-lighten-2" href="calendar.html">Calendar</a></li>
 						<li><a class="grey-text text-lighten-2" href="officers.html">Officers</a></li>
-						<li><a class="grey-text text-lighten-2" href="http://globaldentalrelief.org/">Global Dental Relief</a></li>
+						<li><a class="grey-text text-lighten-2" href="https://globaldentalrelief.org/">Global Dental Relief</a></li>
 					</ul>
 					<ul class="col l6 s12 footer-ul">
 				  		<li><a class="grey-text text-lighten-2" href="about.html">About</a></li>
@@ -248,11 +248,11 @@
 	  		</div>
 		</div><!--end of row -->
   	</div><!--end container-->
-	
+
   	<div class="footer-copyright">
 		<div class="container">
 			&copy; 2016 Project Smile at UC Merced
-			<p class="no-marg-no-pad right">Website designed by: 
+			<p class="no-marg-no-pad right">Website designed by:
 				<a class="grey-text text-lighten-4" href="mailto:leelandmiller@gmail.com?Subject=Web%20Design%20Inquiry"
 				target="_blank">Leeland Miller</a>
 			</p>
@@ -260,10 +260,10 @@
   	</div>
 </footer>
 
-	<!--Import jQuery before materialize.js--> 
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script> 
-	<script type="text/javascript" src="js/materialize.min.js"></script> 
-	
+	<!--Import jQuery before materialize.js-->
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="js/materialize.min.js"></script>
+
 	<script>
 		$(document).ready(function(){
 			$('.parallax').parallax();
