--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!--Import Google Icon Font-->
-<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <!--Import materialize.css framework!-->
 <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -16,15 +16,15 @@
 
 <!--nav bar goes here-->
 <nav class="blue darken-4">
-	<div class="nav-wrapper"> 
+	<div class="nav-wrapper">
 		<!--Logo for desktop only-->
 		<div id="logo-wrapper" class="hide-on-med-and-down"> <a href="index.html" class="brand-logo" id="project-smile-logo"> Project Smile
 			<h6 id="uc-merced-logo">University of California, Merced</h6>
 			</a> </div>
-		<!--Logo for tablet and smaller--> 
-		<a href="#!" class="brand-logo hide-on-large-only">Project Smile</a> 
-		
-		<!--Horizontal nav on desktop, hides for smaller displays and creates hamburger nav icon--> 
+		<!--Logo for tablet and smaller-->
+		<a href="#!" class="brand-logo hide-on-large-only">Project Smile</a>
+
+		<!--Horizontal nav on desktop, hides for smaller displays and creates hamburger nav icon-->
 		<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons left-pad">menu</i> </a>
 		<ul class="right hide-on-med-and-down">
 			<li><a href="index.html">Home</a></li>
@@ -33,7 +33,7 @@
 			<li><a href="calendar.html">Calendar</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
-		
+
 		<!--side nav list created on smaller displays-->
 		<ul class="side-nav" id="mobile-demo">
 			<li class="logo"> <img class="logo-img" src="images/tooth_logo.png" alt="Project Smile logo header">
@@ -58,7 +58,7 @@
 </nav>
 
 <!--main content goes here-->
-<main> 
+<main>
 	<!-- About Heading Section -->
 	<div id="about-hero" class="hero-container">
 		<div class="row container">
@@ -71,7 +71,7 @@
 
 	<!-- section1 -->
 	<div id="section1" class="section blue darken-1">
-		
+
 		<div class="row">
 			<div id="white-divider">
 				<div id="section1-icon">
@@ -79,47 +79,47 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="row">
 			<div class="col s12 m5 offset-m1 l5 offset-l1">
 				<p class="grey-text text-lighten-4 justify-text">
-					Project Smile is a group of diverse individuals 
-					that share one common goal: to promote diversity 
-					and leadership in the field of dentistry. This 
-					Pre-Dental student organization on the University 
-					of California, Merced campus was founded on the 
-					core principles of education and civic engagement. 
-					The club has dedicated time to volunteer in various 
-					community to raise oral health awareness and to 
-					advocate for maintaining oral hygiene as well as 
+					Project Smile is a group of diverse individuals
+					that share one common goal: to promote diversity
+					and leadership in the field of dentistry. This
+					Pre-Dental student organization on the University
+					of California, Merced campus was founded on the
+					core principles of education and civic engagement.
+					The club has dedicated time to volunteer in various
+					community to raise oral health awareness and to
+					advocate for maintaining oral hygiene as well as
 					general well being related to current health issues.
 				</p>
 			</div>
-			
+
 			<div class="col s12 m5 l5">
 				<p class="grey-text text-lighten-4 justify-text">
-					This is a pre-dental organization whose purpose is to provide a safe environment 
-					for students to come together to socialize, explore and engage in dental related 
+					This is a pre-dental organization whose purpose is to provide a safe environment
+					for students to come together to socialize, explore and engage in dental related
 					opportunities. Additionally, Project Smile strives to promote oral health awareness through
 					volunteer work, outreach, and attending various workshops at different dental schools. With
-					a group of passionate students, this pre-dental club strives for the utmost success in the 
+					a group of passionate students, this pre-dental club strives for the utmost success in the
 					oral world.
 				</p>
 			</div>
 		</div>
 	</div><!-- end section1 -->
-	
+
 	<!-- Section 2 -->
 	<div id="about-hero2">
 		<!-- Section 2 Heading -->
 		<div id="about-img1" class="hide-on-small-only">
 		</div>
-		
+
 		<div id="small-about-img1" class="hide-on-med-and-up">
 			<img src="images/about-page/ps-tabling.png" alt="Project Smile's Event Table">
 		</div>
 	</div>
-		
+
 	<div id="section2" class="section white">
 		<div class="row">
 			<div id="blue-divider">
@@ -132,39 +132,39 @@
 			<div id="dental-icon1" class="dental-icon col s12 m6">
 				<img src="images/about-page/ic-tooth-diagram.png" alt="dentistry icon">
 				<h5 class="grey-text text-darken-4 center">Global Health Awareness</h5>
-				<p class="grey-text text-darken-4 justify-text"> Project Smile hosts an annual Global Health 	
-					Awareness 
-					fair to encourage the student body to engage in the efforts 
-					of spreading health awareness. This event does not only 
-					focus only on dentistry, but also touches base on public 
+				<p class="grey-text text-darken-4 justify-text"> Project Smile hosts an annual Global Health
+					Awareness
+					fair to encourage the student body to engage in the efforts
+					of spreading health awareness. This event does not only
+					focus only on dentistry, but also touches base on public
 					health, women's rights, and common diseases found throughout the world.
-					Our organization's goal is to ultimately engage our fellow UC Merced Bobcats in both 
-					community service efforts and health awareness. This fair includes multiple campus 
+					Our organization's goal is to ultimately engage our fellow UC Merced Bobcats in both
+					community service efforts and health awareness. This fair includes multiple campus
 					organizations to allow unity and promote diversity in the pre-health fields. </p>
 			</div>
-			
+
 			<div class="col s12 hide-on-med-and-up">
 			<div class="divider hide-on-med-and-up"></div>
 			</div>
-			
+
 			<div id="dental-icon2" class="dental-icon col s12 m6">
 				<img src="images/about-page/ic-tooth-anatomy.png" alt="dentistry icon">
 				<h5 class="grey-text text-darken-4 center">Pre-Dental Conferences</h5>
 				<p class="grey-text text-darken-4 justify-text"> Project Smile attends various dental conferences throughout
-					the year as well. Impression Conference at UCSF and Dugoni 
-					Discovery Day at University of the Pacific are both conferences 
-					aimed toward pre-dental students. Despite the fact that they are 
-					both pre-dental conferences, they are also held at different 
-					universities and provide different information. Through attending 
-					these conferences, Project Smile members gain the opportunity to participate 
-					in dental student panels and simulation labs to help solidify their 
+					the year as well. Impression Conference at UCSF and Dugoni
+					Discovery Day at University of the Pacific are both conferences
+					aimed toward pre-dental students. Despite the fact that they are
+					both pre-dental conferences, they are also held at different
+					universities and provide different information. Through attending
+					these conferences, Project Smile members gain the opportunity to participate
+					in dental student panels and simulation labs to help solidify their
 					chosen career paths in the field of dentistry. </p>
 			</div>
 		</div>
 	</div>
-		
-	
-	
+
+
+
 </main>
 
 <!-- footer -->
@@ -177,7 +177,7 @@
 				<p class="grey-text text-lighten-5">
 					Thank you for visiting Project Smile's website! Please feel free to contact us if you share a
 					passion of oral hygiene with us and are interested in joining Project Smile. Also please feel
-					free to contact our officers for information regarding events, services, or inquiries. 
+					free to contact our officers for information regarding events, services, or inquiries.
 				</p>
 	  		</div>
 	  		<div class="col l5 offset-l2 m4 offset-m3 s12">
@@ -185,7 +185,7 @@
 					<ul class="col l6 s12 footer-ul">
 						<li><a class="grey-text text-lighten-2" href="calendar.html">Calendar</a></li>
 						<li><a class="grey-text text-lighten-2" href="officers.html">Officers</a></li>
-						<li><a class="grey-text text-lighten-2" href="http://globaldentalrelief.org/">Global Dental Relief</a></li>
+						<li><a class="grey-text text-lighten-2" href="https://globaldentalrelief.org/">Global Dental Relief</a></li>
 					</ul>
 					<ul class="col l6 s12 footer-ul">
 				  		<li><a class="grey-text text-lighten-2" href="about.html">About</a></li>
@@ -195,11 +195,11 @@
 	  		</div>
 		</div><!--end of row -->
   	</div><!--end container-->
-	
+
   	<div class="footer-copyright">
 		<div class="container">
 			&copy; 2016 Project Smile at UC Merced
-			<p class="no-marg-no-pad right">Website designed by: 
+			<p class="no-marg-no-pad right">Website designed by:
 				<a class="grey-text text-lighten-4" href="mailto:leelandmiller@gmail.com?Subject=Web%20Design%20Inquiry"
 				target="_blank">Leeland Miller</a>
 			</p>
@@ -207,9 +207,9 @@
   	</div>
 </footer>
 
-<!--Import jQuery before materialize.js--> 
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script> 
-<script type="text/javascript" src="js/materialize.min.js"></script> 
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
 <script>
 		$(document).ready(function(){
 			$('.parallax').parallax();
