--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!--Import Google Icon Font-->
-<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <!--Import materialize.css framework!-->
 <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -17,15 +17,15 @@
 <nav class="blue darken-4">
 	<div class="nav-wrapper">
 		<!--Logo for desktop only-->
-		<div id="logo-wrapper" class="hide-on-med-and-down"> 
+		<div id="logo-wrapper" class="hide-on-med-and-down">
 			<a href="index.html" class="brand-logo" id="project-smile-logo">
 				Project Smile
 				<h6 id="uc-merced-logo">University of California, Merced</h6>
-			</a> 
+			</a>
 		</div>
 		<!--Logo for tablet and smaller-->
-		<a href="#!" class="brand-logo hide-on-large-only">Project Smile</a> 
-		
+		<a href="#!" class="brand-logo hide-on-large-only">Project Smile</a>
+
 		<!--Horizontal nav on desktop, hides for smaller displays and creates hamburger nav icon-->
 		<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons left-pad">menu</i>
 		</a>
@@ -36,7 +36,7 @@
 			<li><a href="calendar.html">Calendar</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
-		
+
 		<!--side nav list created on smaller displays-->
 		<ul class="side-nav" id="mobile-demo">
 			<li class="logo">
@@ -71,9 +71,9 @@
 			</div>
 		</div>
 	</div>
-	
-	
-	
+
+
+
 	<!--Contact Section-->
 	<div class="section grey lighten-4">
 		<div class="row container">
@@ -111,7 +111,7 @@
 							Submit
  						</button>
 					</div>
-				</div>	
+				</div>
 			</form>
 		</div>
 	</div>
@@ -127,7 +127,7 @@
 				<p class="grey-text text-lighten-5">
 					Thank you for visiting Project Smile's website! Please feel free to contact us if you share a
 					passion of oral hygiene with us and are interested in joining Project Smile. Also please feel
-					free to contact our officers for information regarding events, services, or inquiries. 
+					free to contact our officers for information regarding events, services, or inquiries.
 				</p>
 	  		</div>
 	  		<div class="col l5 offset-l2 m4 offset-m3 s12">
@@ -135,7 +135,7 @@
 					<ul class="col l6 s12 footer-ul">
 						<li><a class="grey-text text-lighten-2" href="calendar.html">Calendar</a></li>
 						<li><a class="grey-text text-lighten-2" href="officers.html">Officers</a></li>
-						<li><a class="grey-text text-lighten-2" href="http://globaldentalrelief.org/">Global Dental Relief</a></li>
+						<li><a class="grey-text text-lighten-2" href="https://globaldentalrelief.org/">Global Dental Relief</a></li>
 					</ul>
 					<ul class="col l6 s12 footer-ul">
 				  		<li><a class="grey-text text-lighten-2" href="about.html">About</a></li>
@@ -145,11 +145,11 @@
 	  		</div>
 		</div><!--end of row -->
   	</div><!--end container-->
-	
+
   	<div class="footer-copyright">
 		<div class="container">
 			&copy; 2016 Project Smile at UC Merced
-			<p class="no-marg-no-pad right">Website designed by: 
+			<p class="no-marg-no-pad right">Website designed by:
 				<a class="grey-text text-lighten-4" href="mailto:leelandmiller@gmail.com?Subject=Web%20Design%20Inquiry"
 				target="_blank">Leeland Miller</a>
 			</p>
@@ -157,11 +157,11 @@
   	</div>
 </footer>
 
-	<!--Import jQuery before materialize.js--> 
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script> 
-	<script type="text/javascript" src="js/materialize.min.js"></script> 
-	
-	
+	<!--Import jQuery before materialize.js-->
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="js/materialize.min.js"></script>
+
+
 	<script>
 		$(document).ready(function(){
 			$('.parallax').parallax();
